fix(develop): fix how we work height on mobile

--- a/client/src/Views/HowWeWork/HowWeWork.css
+++ b/client/src/Views/HowWeWork/HowWeWork.css
@@ -11,6 +11,7 @@
     justify-content: space-between;
     padding-bottom: 65px;
     align-items: flex-end;
+    padding-top: 65px;
 }
 
 .how-we-work-content{
@@ -121,7 +122,7 @@
     }
 
     .executive, .comunication{
-        height: 560px;
+        height: fit-content;
         width: calc(90vw - 44px);
         padding: 16px 21px 23px 23px;
         margin: 8.5px 0;
